# querdex

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
infra/: Dockerfile  ENVIRONMENTS.md  README.md  docker-compose.yml
scripts/: dev_index_and_query.sh  run_release_gate.py
src/querdex/: __init__.py  cli.py
src/querdex/adaptive/: __init__.py  updater.py
src/querdex/evaluation/: __init__.py  harness.py  metrics.py
src/querdex/extraction/: __init__.py  aligner.py  chunker.py  extractor.py  models.py  visualize.py
src/querdex/indexing/: __init__.py  coordinator.py  diff_reindex.py  entity_extractor.py  entity_map_updater.py  graph_builder.py  quality.py  tree_builder.py
src/querdex/ingestion/: __init__.py  base.py  orchestrator.py
src/querdex/llm/: __init__.py  anthropic_client.py  client.py  fake_client.py  openai_client.py
src/querdex/ops/: __init__.py  health.py  observability.py  retry.py
src/querdex/query/: __init__.py  analyzer.py  answering.py  graph_walker.py  multi_doc.py  router.py  tiered_search.py
tests/: test_adaptive_updater.py  test_diff_reindex.py  test_docx_integration.py  test_entity_map_updater.py  test_evaluation_harness.py  test_extraction.py  test_graph_builder.py  test_graph_store.py  test_ingestion.py  test_ingestion_additional.py  test_llm_integration.py  test_metrics_harness.py  test_ocr_provider.py  test_parser_golden.py  test_pdf_integration.py  test_pdf_parser.py  test_pipeline.py  test_query_analyzer.py  test_query_graph_multi.py  test_reindex.py  test_routing_suite.py  test_schemas.py  test_store.py  test_tree_builder.py  test_tree_quality.py
(+32 files in other folders)
